fix: UI elements on mobile screen

--- a/components/page-level/notifications/index.module.css
+++ b/components/page-level/notifications/index.module.css
@@ -25,4 +25,7 @@
     margin-top: 20px;
     padding: 12px;
   }
+  .buttons {
+    display: flex;
+  }
 }
